<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable name="viewModel" type="com.rhaegar.meipai.ui.main.MainViewModel"/>
    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">


        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:gravity="center_vertical"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:textColor="@color/color_3c3c3c"
                      android:textSize="14sp"
                      android:text="@string/space_time"
                      android:layout_height="wrap_content"/>


            <EditText android:layout_width="100dp"
                      android:layout_marginLeft="8dp"
                      android:padding="8dp"
                      android:background="@drawable/seekbar"
                      android:textColor="@color/color_9d9d9d"
                      android:inputType="number"
                      android:text="@={viewModel.spaceTime}"
                      android:textSize="14sp"
                      android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:layout_marginTop="32dp"
                      android:gravity="center_vertical"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:textColor="@color/color_3c3c3c"
                      android:textSize="14sp"
                      android:text="@string/take_numbers"
                      android:layout_height="wrap_content"/>


            <EditText android:layout_width="100dp"
                      android:layout_marginLeft="8dp"
                      android:padding="8dp"
                      android:background="@drawable/seekbar"
                      android:textColor="@color/color_9d9d9d"
                      android:inputType="number"
                      android:text="@={viewModel.takeNumbers}"
                      android:textSize="14sp"
                      android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:layout_marginTop="32dp"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                      android:textColor="@color/color_3c3c3c"
                      android:textSize="14sp"
                      android:text="@string/finish_numbers"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_marginLeft="8dp"
                      android:textColor="@color/color_3c3c3c"
                      android:textSize="14sp"
                      android:text="@{viewModel.finishNumbers}"
                      android:layout_height="wrap_content"/>


            <TextView android:layout_width="wrap_content"
                      android:layout_marginLeft="32dp"
                      android:textColor="@color/color_3c3c3c"
                      android:textSize="14sp"
                      android:text="@string/finish_times"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_marginLeft="8dp"
                      android:textColor="@color/color_3c3c3c"
                      android:textSize="14sp"
                      android:text="@{viewModel.finishTimes}"
                      android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:gravity="center_vertical"
                      android:orientation="horizontal"
                      android:layout_marginTop="16dp"
                      android:layout_height="wrap_content">
            <ProgressBar android:layout_width="0dp"
                         android:layout_weight="1"
                         android:progress="@{viewModel.percent}"
                         android:progressDrawable="@drawable/progressbar"
                         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                         android:layout_height="20dp"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_marginLeft="16dp"
                      android:textColor="@color/color_3c3c3c"
                      android:textSize="14sp"
                      android:text='@{viewModel.percent+@string/percent}'
                      android:layout_height="wrap_content"/>
        </LinearLayout>



        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:layout_marginTop="32dp"
                      android:gravity="center_vertical"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:textColor="@color/color_3c3c3c"
                      android:textSize="14sp"
                      android:text="@string/button_times"
                      android:layout_height="wrap_content"/>


            <EditText android:layout_width="100dp"
                      android:layout_marginLeft="8dp"
                      android:padding="8dp"
                      android:background="@drawable/seekbar"
                      android:textColor="@color/color_9d9d9d"
                      android:inputType="number"
                      android:text="@={viewModel.buttonTimes}"
                      android:textSize="14sp"
                      android:layout_height="wrap_content"/>


        </LinearLayout>

        <ImageView android:layout_width="80dp"
                   android:onClick="@{()->viewModel.startOrPauseTakeDelayVideo()}"
                   android:src="@{viewModel.isTakeDelayVideo?@drawable/icon_take_vedio_stop:@drawable/ic_take_vedio_light}"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="40dp"
                   android:layout_height="80dp"/>
    </LinearLayout>
</layout>

