<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="com.rhaegar.meipai.ui.main.MainViewModel"/>
    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <TextView android:layout_width="match_parent"
                  android:textSize="16sp"
                  android:text="@{viewModel.startPositionText}"
                  android:textColor="@color/color_3c3c3c"
                  android:layout_height="wrap_content"/>

        <RelativeLayout android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/tv"
                      android:layout_centerVertical="true"
                      android:textColor="@color/color_3c3c3c"
                      android:textSize="14sp"
                      android:text="@string/slide_rail"
                      android:layout_height="wrap_content"/>
            <ImageView android:layout_width="0dp" android:layout_height="20dp"
                       android:layout_marginLeft="-30dp"
                       android:layout_centerVertical="true"

                       android:layout_toRightOf="@+id/iv1"
                       android:layout_toLeftOf="@+id/iv2"
                       android:scaleType="fitXY"
                       android:layout_marginRight="-30dp"
                       android:src="@drawable/bg_slide"
                       android:layout_weight="1"/>
            <com.rhaegar.meipai.ui.main.LongClickButton2
                    android:layout_width="60dp"
                    android:layout_toRightOf="@id/tv"
                    android:id="@+id/iv1"
                    app:cancelListener="@{()->{viewModel.onCancel(1)}}"
                    android:enabled="@{viewModel.startPositionClickAble}"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:onClick="@{()->viewModel.longClick(1)}"
                    android:background="@drawable/bg_arow_left"
                    android:layout_height="60dp"/>


            <TextView android:layout_width="60dp"
                      android:background="@drawable/bg_sure"
                      android:layout_alignParentRight="true"
                      android:gravity="center"
                      android:textSize="16sp"
                      android:onClick="@{()->viewModel.sure(1)}"
                      android:enabled="@{viewModel.startPositionSureClickAble}"
                      android:textColor="@color/text_color"
                      android:id="@+id/tv1"
                      android:text="@string/sure"
                      android:layout_height="60dp"/>

            <com.rhaegar.meipai.ui.main.LongClickButton2 android:layout_width="60dp"
                                                         android:id="@+id/iv2"
                                                         app:cancelListener="@{()->{viewModel.onCancel(2)}}"
                                                         android:enabled="@{viewModel.startPositionClickAble}"
                                                         android:layout_centerVertical="true"
                                                         android:layout_toLeftOf="@id/tv1"
                                                         android:background="@drawable/bg_arow_right"
                                                         android:onClick="@{()->viewModel.longClick(2)}"
                                                         android:layout_height="60dp"/>
        </RelativeLayout>


        <TextView android:layout_width="match_parent"
                  android:textSize="16sp"
                  android:layout_marginTop="16dp"
                  android:text="@{viewModel.rotatePositionText}"
                  android:textColor="@color/color_3c3c3c"
                  android:layout_height="wrap_content"/>

        <RelativeLayout android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/tv2"
                      android:layout_centerVertical="true"
                      android:textColor="@color/color_3c3c3c"
                      android:textSize="14sp"
                      android:text="@string/rotate"
                      android:layout_height="wrap_content"/>
            <ImageView android:layout_width="0dp" android:layout_height="20dp"
                       android:layout_marginLeft="-30dp"
                       android:layout_centerVertical="true"

                       android:layout_toRightOf="@+id/iv3"
                       android:layout_toLeftOf="@+id/iv4"
                       android:scaleType="fitXY"
                       android:layout_marginRight="-30dp"
                       android:src="@drawable/bg_slide"
                       android:layout_weight="1"/>
            <com.rhaegar.meipai.ui.main.LongClickButton2 android:layout_width="60dp"
                                                         android:layout_toRightOf="@id/tv2"
                                                         android:id="@+id/iv3"
                                                         app:cancelListener="@{()->{viewModel.onCancel(3)}}"
                                                         android:enabled="@{viewModel.rotatePositionClickAble}"
                                                         android:layout_centerVertical="true"
                                                         android:onClick="@{()->viewModel.longClick(3)}"
                                                         android:layout_marginLeft="16dp"
                                                         android:background="@drawable/bg_arow_left"
                                                         android:layout_height="60dp"/>


            <TextView android:layout_width="60dp"
                      android:background="@drawable/bg_sure"
                      android:layout_alignParentRight="true"
                      android:gravity="center"
                      android:textSize="16sp"
                      android:onClick="@{()->viewModel.sure(2)}"
                      android:enabled="@{viewModel.rotatePositionSureClickAble}"
                      android:textColor="@color/text_color"
                      android:id="@+id/tv3"
                      android:text="@string/sure"
                      android:layout_height="60dp"/>

            <com.rhaegar.meipai.ui.main.LongClickButton2 android:layout_width="60dp"
                                                         android:id="@+id/iv4"
                                                         android:layout_centerVertical="true"
                                                         android:layout_toLeftOf="@id/tv3"
                                                         app:cancelListener="@{()->{viewModel.onCancel(4)}}"
                                                         android:enabled="@{viewModel.rotatePositionClickAble}"
                                                         android:onClick="@{()->viewModel.longClick(4)}"
                                                         android:background="@drawable/bg_arow_right"
                                                         android:layout_height="60dp"/>
        </RelativeLayout>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_marginTop="40dp"
                      android:orientation="horizontal"
                      android:layout_gravity="center"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="80dp"
                      android:text="@string/cancel"
                      android:textSize="16sp"
                      android:onClick="@{()->viewModel.cancel()}"
                      android:textColor="@color/color_3c3c3c"
                      android:background="@drawable/bg_light"
                      android:gravity="center"
                      android:layout_height="80dp"/>

            <TextView android:layout_width="80dp"
                      android:textSize="16sp"
                      android:textColor="@color/color_3c3c3c"
                      android:onClick="@{()->viewModel.takePhoto()}"
                      android:background="@drawable/ic_shutter_dark"
                      android:layout_marginLeft="32dp"
                      android:gravity="center"
                      android:layout_height="80dp"/>
        </LinearLayout>
    </LinearLayout>
</layout>

